<?xml version="1.0" encoding="utf-8"?>
<navigation xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/mobile_navigation"
    app:startDestination="@id/navigation_tournament">

    <fragment
        android:id="@+id/navigation_tournament"
        android:name="com.slan.admin.ui.fragment.tournaments.AllTournamentsFragment"
        android:label="@string/tournaments"
        tools:layout="@layout/fragment_all_tournaments" />
    <fragment
        android:id="@+id/navigation_players"
        android:name="com.slan.admin.ui.fragment.players.AllPlayersFragment"
        android:label="@string/players"
        tools:layout="@layout/fragment_all_players" />
    <fragment
        android:id="@+id/navigation_teams"
        android:name="com.slan.admin.ui.fragment.teams.AllTeamsFragment"
        android:label="@string/teams"
        tools:layout="@layout/fragment_all_teams" />
</navigation>