<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".ui.fragment.tournaments.ViewParticipantsDetailsFragment">



    <com.google.android.material.textview.MaterialTextView
        android:id="@+id/tv_add_age_proof"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        style="@style/text_heading"
        android:text="@string/add_age_proof"
        android:layout_marginStart="16dp"
        android:layout_marginTop="27dp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        />

    <androidx.appcompat.widget.AppCompatImageView
        android:id="@+id/iv_camera"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:src="@drawable/ic_camera"
        android:layout_marginStart="16dp"
        android:layout_marginTop="19dp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/tv_add_age_proof"/>

    <com.google.android.material.textview.MaterialTextView
        android:id="@+id/tv_click_to_add"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/click_to_add"
        style="@style/text_heading"
        android:layout_marginStart="8dp"
        app:layout_constraintStart_toEndOf="@id/iv_camera"
        app:layout_constraintTop_toTopOf="@id/iv_camera"
        app:layout_constraintBottom_toBottomOf="@id/iv_camera"/>

    <androidx.appcompat.widget.AppCompatImageView
        android:id="@+id/iv_adhar_card"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:src="@drawable/ic_image_layout_adhar"
        android:visibility="invisible"
        android:layout_marginTop="-10dp"
        android:layout_marginStart="169dp"
        android:layout_marginEnd="21dp"
        app:layout_constraintTop_toTopOf="@id/tv_add_age_proof"
        app:layout_constraintEnd_toEndOf="parent"/>

    <com.google.android.material.textview.MaterialTextView
        android:id="@+id/tv_file_name"
        android:layout_width="50dp"
        android:layout_height="wrap_content"
        android:visibility="invisible"
        android:text="@string/adhar_card"
        android:textColor="@color/bluebonnet"
        app:layout_constraintStart_toStartOf="@id/iv_adhar_card"
        app:layout_constraintEnd_toEndOf="@id/iv_adhar_card"
        app:layout_constraintTop_toBottomOf="@id/iv_adhar_card"
        />

    <View
        android:id="@+id/view_1"
        android:layout_width="match_parent"
        android:layout_height="1dp"
        android:background="@color/light_silver"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toBottomOf="@id/tv_file_name"
        android:layout_marginHorizontal="16dp"
        android:layout_marginTop="102dp"
        />

    <com.google.android.material.checkbox.MaterialCheckBox
        android:id="@+id/cb_age_proof"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:checked="false"
        android:buttonTint="@color/orange"
        android:layout_marginStart="19dp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/view_1"
        />

    <com.google.android.material.textview.MaterialTextView
        android:id="@+id/tv_age_proof"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        style="@style/text_heading"
        android:layout_marginStart="6dp"
        android:text="@string/age_proof_verified"
        app:layout_constraintStart_toEndOf="@id/cb_age_proof"
        app:layout_constraintTop_toTopOf="@id/cb_age_proof"
        app:layout_constraintBottom_toBottomOf="@id/cb_age_proof"
        />

    <androidx.appcompat.widget.AppCompatButton
        android:id="@+id/bt_save"
        android:layout_width="0dp"
        android:layout_height="28dp"
        android:text="@string/save"
        android:layout_marginTop="300dp"
        android:layout_marginStart="16dp"
        android:layout_marginEnd="1dp"
        android:layout_marginBottom="26dp"
        android:textColor="@color/white"
        android:fontFamily="@font/ubuntu_regular"
        android:textAllCaps="false"
        android:background="@drawable/rounded_button_bg"
        app:layout_constraintEnd_toStartOf="@id/bt_cancel"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintBottom_toBottomOf="parent"
        />

    <androidx.appcompat.widget.AppCompatButton
        android:id="@+id/bt_cancel"
        android:layout_width="0dp"
        android:layout_height="28dp"
        android:text="@string/cancel"
        android:layout_marginEnd="16dp"
        android:layout_marginStart="1dp"
        android:textAllCaps="false"
        android:textColor="@color/orange"
        android:fontFamily="@font/ubuntu_regular"
        android:background="@drawable/button_round_orange_border"
        app:layout_constraintStart_toEndOf="@id/bt_save"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toTopOf="@id/bt_save"
        app:layout_constraintBottom_toBottomOf="@id/bt_save"/>



</androidx.constraintlayout.widget.ConstraintLayout>