<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    xmlns:app="http://schemas.android.com/apk/res-auto">


    <com.google.android.material.textview.MaterialTextView
        android:id="@+id/tv_event_name"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        style="@style/text_heading_small"
        android:text="@string/event_name"
        android:textStyle="normal"
        android:layout_marginStart="16dp"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        />

    <com.google.android.material.textview.MaterialTextView
        android:id="@+id/tv_participant_name"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        style="@style/text_heading_small"
        android:text="@string/participant_name"
        android:textStyle="normal"
        android:layout_marginStart="98dp"
        app:layout_constraintTop_toTopOf="@id/tv_event_name"
        app:layout_constraintStart_toEndOf="@id/tv_event_name"
        app:layout_constraintBottom_toBottomOf="@id/tv_event_name"
        />


    <com.google.android.material.textview.MaterialTextView
        android:id="@+id/tv_action"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        style="@style/text_heading_small"
        android:text="@string/action"
        android:textStyle="normal"
        android:layout_marginStart="111dp"
        android:visibility="invisible"
        app:layout_constraintTop_toTopOf="@id/tv_participant_name"
        app:layout_constraintStart_toEndOf="@id/tv_participant_name"
        app:layout_constraintBottom_toBottomOf="@id/tv_participant_name"
        />



    <View
        android:layout_width="match_parent"
        android:layout_height="1dp"
        android:layout_marginTop="14.81dp"
        android:background="@color/light_silver"
        android:layout_marginHorizontal="16dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/tv_event_name" />





</androidx.constraintlayout.widget.ConstraintLayout>